log
Thu 23 Mar 2023 03:35:16 PM UTC: 
 list.c | 0
 1 file changed, 0 insertions(+), 0 deletions(-)
 tests:  0|6
total_score: 0/70
59dc5a9
Thu 23 Mar 2023 03:42:44 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
0fd41a9
Thu 23 Mar 2023 03:45:03 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f1715f7
Thu 23 Mar 2023 03:45:33 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8e52d88
Thu 23 Mar 2023 03:45:47 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:16: error: ‘list’ is a pointer; did you mean to use ‘->’?
   41 |     return list.head;
      |                ^
      |                ->
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
703b37c
Thu 23 Mar 2023 03:47:52 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
9c802b3
Thu 23 Mar 2023 03:48:36 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
e7613bf
Thu 23 Mar 2023 03:50:22 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:47:7: error: expected identifier or ‘(’ before ‘->’ token
   47 |   List->current->data = list->current->next
      |       ^~
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8e1025b
Thu 23 Mar 2023 03:50:35 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:47:44: error: expected ‘;’ before ‘return’
   47 |   list->current->data = list->current->next
      |                                            ^
      |                                            ;
   48 |     return list->current->data;
      |     ~~~~~~                                  
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ba48ee3
Thu 23 Mar 2023 03:50:41 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
470f4c8
Thu 23 Mar 2023 03:51:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:47:23: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   47 |   list->current = list->next;
      |                       ^~
Compilation failed
f6827ba
Thu 23 Mar 2023 03:52:27 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
a99fb74
Thu 23 Mar 2023 03:53:35 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
965f1e6
Thu 23 Mar 2023 03:54:08 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
321e9b9
Thu 23 Mar 2023 03:54:23 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
58a3958
Thu 23 Mar 2023 03:55:02 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a8312c5
Thu 23 Mar 2023 03:56:08 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
0d3bcbc
Thu 23 Mar 2023 03:56:39 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bb83cb3
Thu 23 Mar 2023 03:57:05 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
60fa73c
Thu 23 Mar 2023 03:58:27 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
a402951
Thu 23 Mar 2023 03:58:43 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
cf68f0f
Thu 23 Mar 2023 03:59:57 PM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
d18161c
Thu 23 Mar 2023 04:00:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
9e73a32
Thu 23 Mar 2023 04:02:43 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|4
total_score: 25/70
29a1995
Thu 23 Mar 2023 04:03:53 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  9|3
total_score: 35/70
618cfb0
Thu 23 Mar 2023 04:10:09 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:69:15: error: incompatible types when assigning to type ‘Node’ from type ‘Node *’
   69 |   nuevoDato = createNode(data);
      |               ^~~~~~~~~~
list.c:70:12: error: invalid type argument of ‘->’ (have ‘Node’)
   70 |   nuevoDato->next = list->head;
      |            ^~
Compilation failed
14df08f
Thu 23 Mar 2023 04:10:37 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
1efbed4
Thu 23 Mar 2023 04:11:16 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:71:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   71 |     return NULL;
      |            ^~~~
list.c:67:6: note: declared here
   67 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f350999
